syntax = "proto3";

service Clients {
  rpc findAll (ClientPaginationRequest) returns (ClientPaginationResponse) {}
  rpc findOne (ClientIdRequest) returns (ClientResponse) {}
  rpc findTransactions (ClientIdRequest) returns (TransactionsResponse) {}
  rpc findSubscriptions (ClientIdRequest) returns (SubscriptionsResponse) {}
}

service Subscriptions {
  rpc findPackages (AccountIdRequest) returns (SubscriptionPackagePaginationResponse) {}
  rpc groupByApplication (AccountIdRequest) returns (SubscriptionsGroupByApplication) {}
  rpc groupByCountry (SubscriptionsRequest) returns (SubscriptionsGroupByCountry) {}
  rpc count (SubscriptionsRequest) returns (SubscriptionCounts) {}
}

service Transactions {
  rpc findAll (TransactionPaginationRequest) returns (TransactionPaginationResponse) {}
  rpc sum (TransactionStatisticsRequest) returns (TransactionSums) {}
}

service Integrations {
  rpc validate (AccessTokenRequest) returns (ActionStateResponse) {}
  rpc create (AccountCreateRequest) returns (ActionStateResponse) {}
}

service Reports {
  rpc trials(TrialReportRequest) returns (TrialReportResponse) {}
  rpc averageDuration(AverageDurationReportRequest) returns (TrialAverageDurationResponse) {}
  rpc mrr(MrrReportRequest) returns (MrrReportResponse) {}
}

// Generics 

message Empty {}

message Coordinate {
  float x = 1;
  float y = 2;
}

message ClientIdRequest {
  string account_id = 1;
  string client_id = 2;
}

message AccountIdRequest {
  string account_id = 1;
  oneof optional_start_date {
    string start_date = 2;
  }
  oneof optional_end_date {
    string end_date = 3;
  }
}

message FilterRequest {
  optional int32 limit = 10;
  optional DateFilter filter = 3;
}

message DateFilter {
  oneof optional_start_date {
    string start_date = 1;
  }

  oneof optional_end_date {
    string end_date = 2;
  }
}

// Clients

message ClientPaginationRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  } 
  oneof optional_start_date {
    string start_date = 3;
  }
  oneof optional_end_date {
    string end_date = 4;
  }
  oneof optional_limit {
    int32 limit = 5;
  }
  optional ClientCursor cursor = 6;
}

message ClientResponse {
  Client row = 1;
}

message ClientPaginationResponse {
  repeated Client rows = 1;
  ClientCursor cursor = 3;
}

message ClientCursor {
  string first_interaction = 1;
  string client_id = 2;
}

message Client {
  string client_id = 1;
  string first_interaction = 2;
  string total_base_client_purchase = 3;
  string total_base_developer_proceeds = 4;
  string country_id = 5;
  string country_name = 6;
  string device_type_id = 7;
  string device_type_name = 8;
  string provider_id = 9;
}

// Subscriptions

message SubscriptionsResponse {
  repeated Subscription rows = 1;
}

message SubscriptionsRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  }
  oneof optional_start_date {
    string start_date = 3;
  }
  oneof optional_end_date {
    string end_date = 4;
  }
}

message Subscription {
  repeated string subscription_active_period = 1;
  string subscription_package_id = 2;
  string subscription_package_name = 3;
  string application_id = 4;
}

message SubscriptionPackagePaginationResponse {
  repeated SubscriptionPackage rows = 1;
}

message SubscriptionPackage {
  string subscription_name = 1;
  string subscription_duration = 2;
  string subscription_package_id = 3;
  string subscription_group_id = 4;
}

message SubscriptionsGroupByApplicationRow {
  string application_id = 1;
  optional int32 subscription_package_count = 2;
}

message SubscriptionsGroupByApplication {
  repeated SubscriptionsGroupByApplicationRow rows = 1;
}

message SubscriptionsGroupByCountryRow {
  string country_id = 1;
  string country_name = 2;
  Coordinate country_coordinates = 3;
  int32 total_count = 4;
  int32 trial_past_count = 5;
  int32 churn_count = 6;
  int32 revenue = 7;
}

message SubscriptionsGroupByCountry {
  repeated SubscriptionsGroupByCountryRow rows = 1;
}

message SubscriptionCounts {
  int32 total = 1;
  int32 total_trial = 2;
  optional int32 at_start = 3;
  optional int32 at_start_trial = 4;
  int32 current = 5;
  int32 current_trial = 6;
}

// Transactions

message TransactionPaginationRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  }
  oneof optional_start_date {
    string start_date = 3;
  }
  oneof optional_end_date {
    string end_date = 4;
  }
  oneof optional_limit {
    int32 limit = 5;
  }
  optional TransactionCursor cursor = 6;
}

message TransactionPaginationResponse {
  repeated Transaction rows = 1;
  TransactionCursor cursor = 3;
}

message TransactionCursor {
  string client_id = 1;
  string event_date = 2;
}

message Transaction {
  string client_id = 1;
  string transaction_type = 2;
  string event_date = 3;
  string base_client_purchase = 4;
  string base_developer_proceeds = 5;
  string subscription_package_id = 6;
  string subscription_package_name = 7;
  string application_id = 8;
  string country_id = 10;
  string country_name = 11;
}

message TransactionsResponse {
  repeated Transaction rows = 1;
}

message TransactionStatisticsRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  }
  oneof optional_start_date {
    string start_date = 3;
  }
  oneof optional_change_date {
    string change_date = 4;
  }
  oneof optional_end_date {
    string end_date = 5;
  }
}

message TransactionSums {
  optional string changed_total_base_developer_proceeds = 1;
  optional string changed_refund_base_developer_proceeds = 2;
  string current_total_base_developer_proceeds = 3;
  string current_refund_base_developer_proceeds = 4;
}

// Integrations

message AccountCreateRequest {
  string account_id = 1;
  string access_token = 2;
}

message ActionStateResponse {
  bool state = 1;
}

message AccessTokenRequest {
  string access_token = 1;
}

// Reports

message TrialReportRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  }
}

message AverageDurationReportRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  }
}

message MrrReportRequest {
  string account_id = 1;
  oneof optional_application_id {
    string application_id = 2;
  }
}

message TrialReportResponse {
  repeated TrialReportRow rows = 1; 
  repeated string available_filters = 2;
}

message TrialAverageDurationResponse {
  repeated AverageDurationReportRow rows = 1; 
  repeated string available_filters = 2;
}

message MrrReportResponse {
  repeated MrrReportRow rows = 1;
  repeated string available_filters = 2;
}

message TrialReportRow {
  string primary = 1;
  int32 secondary = 2;
  int32 previous_client_count = 3;
}

message AverageDurationReportRow {
  string primary = 1;
  int32 average_trial_duration = 2;
  int32 average_subscription_duration = 3;
}

message MrrReportRow {
  string month = 1;
  string mrr = 2;
  int32 clients = 3;
  string new_mrr = 4;
  string expansion_mrr = 5;
  string churned_mrr = 6;
  string contraction_mrr = 7;
  string net_new_mrr = 8;
  string mrr_churn = 9;
  int32 clients_churn = 10;
  string arpu = 11;
}
